[gd_scene load_steps=35 format=3 uid="uid://baotmecrvdh1n"]

[ext_resource type="Script" path="res://player.gd" id="1_8evm6"]
[ext_resource type="AudioStream" uid="uid://qonm2n7irkek" path="res://addons/Spillutvikling/gun-shot-1-176892.mp3" id="2_xsetq"]
[ext_resource type="Shader" path="res://First 3D.gdshader" id="2_yeqab"]
[ext_resource type="AudioStream" uid="uid://cwcyw6yqae8c7" path="res://addons/Spillutvikling/slow-explosion-190430.mp3" id="3_2fys7"]
[ext_resource type="ArrayMesh" uid="uid://bcl63soni8qmq" path="res://addons/SniperRifle_01.obj" id="4_urlsx"]
[ext_resource type="Texture2D" uid="uid://ccwnts1koiogs" path="res://addons/Spillutvikling/texturebar_underTexture.png" id="5_rydje"]
[ext_resource type="Texture2D" uid="uid://chtva2gwyc3x7" path="res://addons/Spillutvikling/texturebar_texture2.png" id="6_nino0"]
[ext_resource type="PackedScene" uid="uid://bec0w11hrdlqo" path="res://granade_launcher.tscn" id="6_to41u"]
[ext_resource type="AudioStream" uid="uid://bv8atwei76qb6" path="res://addons/Spillutvikling/dio-time-stop_sound.mp3" id="8_q5pac"]
[ext_resource type="AudioStream" uid="uid://bcqrfjrw1doum" path="res://addons/Spillutvikling/star-platinum-za-warudo-star-platinum-the-world-time-resume.mp3" id="9_bf2ia"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_g34j7"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_hqr3c"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="SphereMesh" id="SphereMesh_tpwrb"]
radius = 0.1
height = 0.2

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5as3t"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vodix"]
direction = Vector3(0, 1, 0)
initial_velocity_min = 0.5
initial_velocity_max = 2.0
gravity = Vector3(0, 0, 0)

[sub_resource type="Gradient" id="Gradient_refe7"]
colors = PackedColorArray(0.960784, 0.568627, 0.0392157, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s0wr7"]
gradient = SubResource("Gradient_refe7")
fill = 2
fill_from = Vector2(0.5, 0.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wbgoe"]
transparency = 1
blend_mode = 1
albedo_color = Color(0.945098, 0.717647, 0.266667, 1)
albedo_texture = SubResource("GradientTexture2D_s0wr7")
billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_0aa7k"]
material = SubResource("StandardMaterial3D_wbgoe")
size = Vector2(0.25, 0.25)

[sub_resource type="BoxMesh" id="BoxMesh_iuq50"]

[sub_resource type="BoxMesh" id="BoxMesh_3i61k"]

[sub_resource type="BoxMesh" id="BoxMesh_guc1c"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_f1cht"]

[sub_resource type="QuadMesh" id="QuadMesh_0y62e"]
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uac24"]
shader = ExtResource("2_yeqab")
shader_parameter/slow_color = Vector4(0, 0.5, 1, 0.5)
shader_parameter/distortion_strength = 0.1
shader_parameter/time_slow_factor = 0.5

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eexhu"]
albedo_color = Color(0, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_501fi"]
albedo_color = Color(0.564706, 0.027451, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_p80a3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_eun3j"]

[sub_resource type="LabelSettings" id="LabelSettings_6uc58"]
font_size = 70
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_qardr"]
font_size = 70
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m2as5"]
font_size = 70

[sub_resource type="Animation" id="Animation_kb57i"]
resource_name = "time_slow"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x44py"]
_data = {
"time_slow": SubResource("Animation_kb57i")
}

[node name="Player" type="CharacterBody3D" groups=["Player"]]
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource("1_8evm6")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_g34j7")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.279524, 0)
shape = SubResource("ConvexPolygonShape3D_hqr3c")

[node name="TwistPivot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00254601, -0.0883076, -0.00125827)
current = true
metadata/_edit_lock_ = true

[node name="Grapple" type="RayCast3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
target_position = Vector3(0, -20, 0)
collide_with_areas = true

[node name="Grapple_point" type="MeshInstance3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00226927, 0.00426412, -6.53972)
visible = false
mesh = SubResource("SphereMesh_tpwrb")
surface_material_override/0 = SubResource("StandardMaterial3D_5as3t")

[node name="MuzzleFlash" type="Node3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.348744, -0.250334, -1.07367)

[node name="OmniLight3D" type="OmniLight3D" parent="TwistPivot/PitchPivot/Camera3D/MuzzleFlash"]
omni_range = 7.0

[node name="MuzzleFlash" type="GPUParticles3D" parent="TwistPivot/PitchPivot/Camera3D/MuzzleFlash"]
emitting = false
lifetime = 0.05
explosiveness = 0.96
process_material = SubResource("ParticleProcessMaterial_vodix")
draw_pass_1 = SubResource("QuadMesh_0aa7k")

[node name="MuzzleTimer" type="Timer" parent="TwistPivot/PitchPivot/Camera3D/MuzzleFlash"]
wait_time = 0.05

[node name="Node" type="Node3D" parent="TwistPivot/PitchPivot/Camera3D"]

[node name="Gun" type="MeshInstance3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(0.149949, -6.85311e-06, 0.0130885, 0, 0.15, 0.000872665, -0.00392655, -0.00026171, 0.499828, 0.363143, -0.242164, -0.789659)
mesh = SubResource("BoxMesh_iuq50")

[node name="GunShot" type="AudioStreamPlayer3D" parent="TwistPivot/PitchPivot/Camera3D/Gun"]
stream = ExtResource("2_xsetq")
volume_db = -15.0

[node name="SlowGunShot" type="AudioStreamPlayer3D" parent="TwistPivot/PitchPivot/Camera3D/Gun"]
stream = ExtResource("3_2fys7")

[node name="AlsoGun" type="MeshInstance3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(0.0799726, -1.11443e-09, 0.0026177, 4.4483e-10, 0.2, 5.23332e-11, -0.00209416, -7.552e-11, 0.0999657, 0.391951, -0.420288, -0.628082)
mesh = SubResource("BoxMesh_3i61k")
skeleton = NodePath("../Gun")

[node name="AlsoGun2" type="MeshInstance3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(0.00999657, -5.57217e-10, 0.000523539, 5.56038e-11, 0.1, 1.04662e-11, -0.000261769, -3.7758e-11, 0.0199931, 0.394362, -0.189736, -0.607757)
mesh = SubResource("BoxMesh_guc1c")

[node name="Pos" type="Node3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(0.999657, -5.57217e-09, 0.0261769, 5.56038e-09, 1, 5.23313e-10, -0.0261769, -3.77581e-10, 0.999657, 0.348919, -0.242971, -1.14384)

[node name="GPUParticles3D" type="GPUParticles3D" parent="TwistPivot/PitchPivot/Camera3D/Pos"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.32831e-10, -3.46945e-18, 0.0859924)
process_material = SubResource("ParticleProcessMaterial_f1cht")

[node name="Shader" type="MeshInstance3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.313614, -0.510402)
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_0y62e")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_uac24")

[node name="SniperRifle01" type="MeshInstance3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(0.6, 0, 0, 0, 0.6, -1.78814e-08, 0, 1.78814e-08, 0.6, 0.39301, -0.119749, -1.03246)
visible = false
mesh = ExtResource("4_urlsx")
skeleton = NodePath("../../../..")
surface_material_override/0 = SubResource("StandardMaterial3D_eexhu")
surface_material_override/1 = SubResource("StandardMaterial3D_501fi")
surface_material_override/2 = SubResource("StandardMaterial3D_p80a3")
surface_material_override/3 = SubResource("StandardMaterial3D_eun3j")

[node name="GrenadeLauncher" parent="TwistPivot/PitchPivot/Camera3D" instance=ExtResource("6_to41u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.367343, -0.439096, 0.414796)
visible = false

[node name="RayCast3D" type="RayCast3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
visible = false
target_position = Vector3(0, -5, 0)

[node name="HoldPosition" type="Node3D" parent="TwistPivot/PitchPivot/Camera3D"]
transform = Transform3D(1, 0, 2.22045e-16, -9.80119e-17, -4.37114e-08, -1, 0, 1, -4.37114e-08, 2.32831e-09, 1.78814e-07, -3.49109)
visible = false

[node name="can_shoot_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="reloading_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="crosshair" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.9999
offset_top = -29.0
offset_right = 14.0001
offset_bottom = 248.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.994329, 1.01262)
text = "+

"
label_settings = SubResource("LabelSettings_6uc58")

[node name="bullet_count" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -107.0
offset_top = -96.0
grow_horizontal = 0
grow_vertical = 0
text = "6/6
"
label_settings = SubResource("LabelSettings_qardr")

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 556.0
grow_vertical = 2
scale = Vector2(2, 0.3)
max_value = 5000.0
value = 5000.0
texture_under = ExtResource("5_rydje")
texture_progress = ExtResource("6_nino0")

[node name="Fade_timer" type="Timer" parent="UI/Control/TextureProgressBar"]
one_shot = true

[node name="kilometer_label" type="Label" parent="UI/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -96.0
offset_right = 238.0
grow_vertical = 0
text = "KM
"
label_settings = SubResource("LabelSettings_m2as5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_x44py")
}

[node name="timestop_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("8_q5pac")

[node name="TimeSpeedUp_sound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("9_bf2ia")

[node name="TimeSpeedUp_wait" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="TwistPivot/PitchPivot/Camera3D/MuzzleFlash/MuzzleTimer" to="." method="_on_muzzle_timer_timeout"]
[connection signal="timeout" from="can_shoot_timer" to="." method="_on_can_shoot_timer_timeout"]
[connection signal="timeout" from="reloading_timer" to="." method="_on_reloading_timer_timeout"]
[connection signal="timeout" from="TimeSpeedUp_wait" to="." method="_on_time_speed_up_wait_timeout"]
